# openvpn-sys

./: package.json
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/dummyvpn/: mod.rs
src-tauri/src/openvpn/: mod.rs
src-tauri/src/vpn/: mod.rs
src/lib/: Connect.svelte
